--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,12 +1,11 @@
 body {
-    font-family: 'Open Sans';
-    background-color: #fdfffc;
-    color: #212529 !important;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23d7d9d6' fill-opacity='0.03'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.03'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
+    font-family: 'Nunito';
+    background-color: #f6f4f4;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23000000' fill-opacity='0.03'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .navbar-brand {
-    font-family: 'Open Sans';
+    font-family: 'Nunito';
     font-weight: bold;
 }
 
@@ -16,17 +15,17 @@ body {
     width: 40px;
     height: 40px;
     box-shadow:  5px 5px 10px #d5d6d4,
-    -5px -5px 10px #ffffff;
+    -5px -5px 10px #f6f4f4;
 }
 
 .navicon-bg {
     margin-right: 20px;
     border-radius: 50%;
-    background: #fdfffc;
+    background: #f6f4f4;
 }
 
 .active {
-    background: #fdfffc;
+    background: #f6f4f4;
     box-shadow: inset 6px 6px 12px #d5d6d4,
     inset -6px -6px 12px #ffffff;
 }
@@ -36,9 +35,9 @@ body {
 }
 
 .navbar {
-    background: #fdfffc;
+    background: #f6f4f4;
     box-shadow:  5px 5px 10px #d5d6d4,
-    -5px -5px 10px #ffffff;
+    -5px -5px 10px rgba( 0, 0, 0, 0.25);
     z-index: 2;
 }
 
@@ -47,22 +46,17 @@ body {
 }
 
 .header-text {
-    color: #fdfffc;
+    color: #212529;
     font-size: 5rem;
-    text-shadow: 5px 5px 10px #d5d6d4,
-    -5px -5px 10px #ffffff;
 }
 
 .header-paragraph {
     font-size: 1.5rem;
-    background-color: #d5d6d4;
-    color: transparent;
-    text-shadow: 2px 2px 3px #ffffff;
-    -webkit-background-clip: text;
+    color: #212529;
 }
 
 .card {
     font-weight: bold;
-    background-color: #fdfffc;
-    background: #fdfffc;
+    background-color: #f6f4f4;
+    background: #f6f4f4;
 }
