--- a/public/css/index.css
+++ b/public/css/index.css
@@ -36,8 +36,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 .navbar {
     background: #f6f4f4;
-    box-shadow:  5px 5px 10px #d5d6d4,
-    -5px -5px 10px rgba( 0, 0, 0, 0.25);
+    box-shadow:
+    0px 5px 10px rgba( 0, 0, 0, 0.15);
     z-index: 2;
 }
 
