--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,6 +7,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .navbar-brand {
     font-family: 'Nunito';
     font-weight: bold;
+    text-decoration: underline;
+  text-decoration-color: #ff9f1c;
 }
 
 .navicon {
