--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,4 +62,5 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     font-weight: bold;
     background-color: #f6f4f4;
     background: #f6f4f4;
+    box-shadow: 0px 5px 10px rgba( 0, 0, 0, 0.15);
 }
